[package]
authors = ["Outvi V <git@outv.im>"]
edition = "2018"
name = "holoinfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
phf = {version = "0.8.0", features = ["macros"]}
reqwest = {version = "0.10.10", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"]}
